# monorepo

./: README.md
contracts/: Cargo.toml
contracts/src/: lib.rs  state.rs
node/: Cargo.toml
node/src/: indexer.rs  ipfs.rs  lib.rs  model.rs  types.rs  worker.rs
ui/: package-lock.json  package.json  tailwind.config.ts
ui/app/: globals.css  layout.tsx  page.tsx
ui/app/dashboard/: layout.tsx
ui/app/dashboard/client/: page.tsx
ui/components/: faucet.tsx  header.tsx
ui/components/dashboard/publisher/new-model/: index.tsx
ui/components/dashboard/publisher/new-model/steps/: model-details.tsx  upload-data.tsx
ui/components/ui/: input.tsx  select-box.tsx
ui/lib/: encrypt.ts  types.ts
ui/lib/stores/: new-model.tsx
