[package]
name = "node"
version = "0.1.0"
edition = "2021"

[dependencies]
near-account-id = "1.0.0"
near-crypto = "0.27.0"
near-fetch = "0.6.0"
near-lake-framework = { git = "https://github.com/near/near-lake-framework-rs"}
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.28", features = ["full"] }
